name:                hachytherapy
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Chris Mears
maintainer:          chris@cmears.id.au
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Hachytherapy.Alpha
                       Hachytherapy.Contour
                       Hachytherapy.Coordinate
--                       Hachytherapy.Dose
--                       Hachytherapy.Patient
                       Hachytherapy.Dicom
                       Hachytherapy.ReadBex
                       Hachytherapy.Region
                       Hachytherapy.TCP
                       Hachytherapy.Types
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5
                     , cereal
                     , containers >= 0.5.6.2
                     , diagrams >= 1.3
                     , diagrams-lib >= 1.3.0.3
                     , exceptions >= 0.8.0.2
                     , lens
                     , mtl >= 2.2.1
                     , regex-compat
                     , safe >= 0.3.9
                     , split >= 0.2.2
                     , vector >= 0.10.12.3
  ghc-options:         -Wall -O2
